--- a/iOS/iOS-Info.plist
+++ b/iOS/iOS-Info.plist
@@ -55,7 +55,7 @@
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
-	<string>com.lumoslabs.${PRODUCT_NAME:identifier}</string>
+	<string>com.lumoslabs.MobilePlatformInfo</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
