--- a/iOS/iOS.xcodeproj/xcshareddata/xcschemes/PlatformInfo Debug.xcscheme
+++ b/iOS/iOS.xcodeproj/xcshareddata/xcschemes/PlatformInfo Debug.xcscheme
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "0430"
-   version = "1.3">
+   version = "1.8">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -15,8 +15,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "1D6058900D05DD3D006BFB54"
-               BuildableName = "Platform Info.app"
-               BlueprintName = "PlatformInfo"
+               BuildableName = "MobilePlatformInfo.app"
+               BlueprintName = "MobilePlatformInfo"
                ReferencedContainer = "container:iOS.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -33,8 +33,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "1D6058900D05DD3D006BFB54"
-            BuildableName = "Platform Info.app"
-            BlueprintName = "PlatformInfo"
+            BuildableName = "MobilePlatformInfo.app"
+            BlueprintName = "MobilePlatformInfo"
             ReferencedContainer = "container:iOS.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -53,8 +53,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "1D6058900D05DD3D006BFB54"
-            BuildableName = "Platform Info.app"
-            BlueprintName = "PlatformInfo"
+            BuildableName = "MobilePlatformInfo.app"
+            BlueprintName = "MobilePlatformInfo"
             ReferencedContainer = "container:iOS.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -71,8 +71,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "1D6058900D05DD3D006BFB54"
-            BuildableName = "Platform Info.app"
-            BlueprintName = "PlatformInfo"
+            BuildableName = "MobilePlatformInfo.app"
+            BlueprintName = "MobilePlatformInfo"
             ReferencedContainer = "container:iOS.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
