--- a/iOS/iOS.xcodeproj/xcshareddata/xcschemes/PlatformInfo Release.xcscheme
+++ b/iOS/iOS.xcodeproj/xcshareddata/xcschemes/PlatformInfo Release.xcscheme
@@ -15,8 +15,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "1D6058900D05DD3D006BFB54"
-               BuildableName = "Platform Info.app"
-               BlueprintName = "PlatformInfo"
+               BuildableName = "MobilePlatformInfo.app"
+               BlueprintName = "MobilePlatformInfo"
                ReferencedContainer = "container:iOS.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -33,8 +33,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "1D6058900D05DD3D006BFB54"
-            BuildableName = "Platform Info.app"
-            BlueprintName = "PlatformInfo"
+            BuildableName = "MobilePlatformInfo.app"
+            BlueprintName = "MobilePlatformInfo"
             ReferencedContainer = "container:iOS.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -52,8 +52,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "1D6058900D05DD3D006BFB54"
-            BuildableName = "Platform Info.app"
-            BlueprintName = "PlatformInfo"
+            BuildableName = "MobilePlatformInfo.app"
+            BlueprintName = "MobilePlatformInfo"
             ReferencedContainer = "container:iOS.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -70,8 +70,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "1D6058900D05DD3D006BFB54"
-            BuildableName = "Platform Info.app"
-            BlueprintName = "PlatformInfo"
+            BuildableName = "MobilePlatformInfo.app"
+            BlueprintName = "MobilePlatformInfo"
             ReferencedContainer = "container:iOS.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
