--- a/iOS/iOS-Info.plist
+++ b/iOS/iOS-Info.plist
@@ -67,7 +67,9 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>0.01</string>
+	<string>0</string>
+	<key>CFBuildDate</key>
+	<string>0</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIApplicationExitsOnSuspend</key>
