--- a/iOS/iOS.xcodeproj/xcshareddata/xcschemes/PlatformInfo Test.xcscheme
+++ b/iOS/iOS.xcodeproj/xcshareddata/xcschemes/PlatformInfo Test.xcscheme
@@ -5,6 +5,24 @@
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
+      <PreActions>
+         <ExecutionAction
+            ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
+            <ActionContent
+               title = "Run Script"
+               scriptText = "source ${SRCROOT}/../tools/BuildScript/BuildScript.sh">
+               <EnvironmentBuildable>
+                  <BuildableReference
+                     BuildableIdentifier = "primary"
+                     BlueprintIdentifier = "1D6058900D05DD3D006BFB54"
+                     BuildableName = "MobilePlatformInfo.app"
+                     BlueprintName = "MobilePlatformInfo"
+                     ReferencedContainer = "container:iOS.xcodeproj">
+                  </BuildableReference>
+               </EnvironmentBuildable>
+            </ActionContent>
+         </ExecutionAction>
+      </PreActions>
       <BuildActionEntries>
          <BuildActionEntry
             buildForTesting = "YES"
